--- a/Redis_DB/redis.ipynb
+++ b/Redis_DB/redis.ipynb
@@ -2,23 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 4 required positional arguments: 'self', 'redis_url', 'index_name', and 'embedding'",
+     "ename": "ValidationError",
+     "evalue": "1 validation error for OpenAIEmbeddings\n__root__\n  Did not find openai_api_key, please add an environment variable `OPENAI_API_KEY` which contains it, or pass  `openai_api_key` as a named parameter. (type=value_error)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb Cell 1\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m metadata \u001b[39m=\u001b[39m [\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     {\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39muser\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mjohn\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     },\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m texts \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbar\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbar\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m Redis\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m rds \u001b[39m=\u001b[39m Redis\u001b[39m.\u001b[39mfrom_texts(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m     texts,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m     \u001b[39m#embeddings, (needed if OpenAI Key used)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m     index_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39musers\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m )\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m rds\u001b[39m.\u001b[39mindex_name\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 4 required positional arguments: 'self', 'redis_url', 'index_name', and 'embedding'"
+      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb Cell 1\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvectorstores\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mredis\u001b[39;00m \u001b[39mimport\u001b[39;00m Redis\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39membeddings\u001b[39;00m \u001b[39mimport\u001b[39;00m OpenAIEmbeddings\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m embeddings \u001b[39m=\u001b[39m OpenAIEmbeddings()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m metadata \u001b[39m=\u001b[39m [\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     {\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39muser\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mjohn\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m     },\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m texts \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbar\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbar\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pydantic/main.py:341\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValidationError\u001b[0m: 1 validation error for OpenAIEmbeddings\n__root__\n  Did not find openai_api_key, please add an environment variable `OPENAI_API_KEY` which contains it, or pass  `openai_api_key` as a named parameter. (type=value_error)"
      ]
     }
    ],
    "source": [
     "from langchain.vectorstores.redis import Redis\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "\n",
+    "#embeddings = OpenAIEmbeddings()\n",
     "\n",
     "metadata = [\n",
     "    {\n",
@@ -58,7 +62,6 @@
     "\n",
     "Redis.__init__()\n",
     "\n",
-    "Redis.\n",
     "\n",
     "\n",
     "rds = Redis.from_texts(\n",
