--- a/Redis_DB/redis.ipynb
+++ b/Redis_DB/redis.ipynb
@@ -2,28 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValidationError",
-     "evalue": "1 validation error for OpenAIEmbeddings\n__root__\n  Did not find openai_api_key, please add an environment variable `OPENAI_API_KEY` which contains it, or pass  `openai_api_key` as a named parameter. (type=value_error)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb Cell 1\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvectorstores\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mredis\u001b[39;00m \u001b[39mimport\u001b[39;00m Redis\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39membeddings\u001b[39;00m \u001b[39mimport\u001b[39;00m OpenAIEmbeddings\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m embeddings \u001b[39m=\u001b[39m OpenAIEmbeddings()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m metadata \u001b[39m=\u001b[39m [\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     {\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39muser\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mjohn\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m     },\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/Redis_DB/redis.ipynb#W0sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m texts \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfoo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbar\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mbar\u001b[39m\u001b[39m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pydantic/main.py:341\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValidationError\u001b[0m: 1 validation error for OpenAIEmbeddings\n__root__\n  Did not find openai_api_key, please add an environment variable `OPENAI_API_KEY` which contains it, or pass  `openai_api_key` as a named parameter. (type=value_error)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: redis in /Users/josi/Library/Python/3.8/lib/python/site-packages (5.0.1)\n",
+      "Requirement already satisfied: async-timeout>=4.0.2 in /Users/josi/Library/Python/3.8/lib/python/site-packages (from redis) (4.0.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
+    "%pip install redis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import redis\n",
+    "import logging\n",
     "from langchain.vectorstores.redis import Redis\n",
-    "from langchain.embeddings import OpenAIEmbeddings\n",
-    "\n",
+    "from langchain.embeddings import OpenAIEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#embeddings = OpenAIEmbeddings()\n",
     "\n",
+    "#connection = redis.Redis()\n",
+    "#connection.ping()\n",
+    "r = redis.Redis(host='localhost', port=6379, decode_responses=True, db=0)\n",
+    "\n",
+    "#class Redis(object):#\n",
+    "#    def __init__(self, host='localhost', port=6379,db=0, password=None, socket_timeout=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Test connection\n",
+    "try:\n",
+    "    r.set('foo', 'bar')\n",
+    "    value = r.get('foo')\n",
+    "    print(value)\n",
+    "except redis.ConnectionError as e:\n",
+    "    print(f\"Error connecting to Redis: {e}\")\n",
+    "\n",
+    "\n",
+    "#run redis-server in terminal\n",
+    "#redis-cli for host:port pair -> test connectivity with \"PING\"\n",
+    "#to close: redis-cli shutdown\n",
+    "\n",
+    "#MSET to set multiple key:value pairs and MGET to get multple values for keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Nassau'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.mset({\"Croatia\": \"Zagreb\", \"Bahamas\": \"Nassau\"})\n",
+    "\n",
+    "r.get(\"Bahamas\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "metadata = [\n",
     "    {\n",
     "        \"user\": \"john\",\n",
@@ -57,12 +132,24 @@
     "    },\n",
     "]\n",
     "\n",
-    "texts = [\"foo\", \"foo\", \"foo\", \"bar\", \"bar\"]\n",
-    "\n",
-    "\n",
-    "Redis.__init__()\n",
-    "\n",
-    "\n",
+    "texts = [\"foo\", \"foo\", \"foo\", \"bar\", \"bar\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.basicConfig()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "rds = Redis.from_texts(\n",
     "    texts,\n",
@@ -72,7 +159,8 @@
     "    index_name=\"users\",\n",
     ")\n",
     "\n",
-    "rds.index_name"
+    "rds.index_name\n",
+    "\n"
    ]
   }
  ],
