updated redis db notebook

--- a/Redis_DB/redis.ipynb
+++ b/Redis_DB/redis.ipynb
@@ -289,7 +289,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.basicConfig()"
+    "logging.basicConfig(level=logging.DEBUG)\n",
+    "logging.basicConfig(filename='chat.log', filemode='a', format='%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "#logging.config.dictConfig()"
    ]
   },
   {
@@ -298,16 +300,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r.execute_command(\"MODULE\", \"LOAD\", \"/path/to/your/redisearch.so\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r.execute_command(\"MODULE\", \"LIST\")"
+    "#r.execute_command(\"MODULE\", \"LOAD\", \"/path/to/your/redisearch.so\")\n",
+    "#r.execute_command(\"MODULE\", \"LIST\")"
    ]
   },
   {
@@ -317,28 +311,25 @@
    "outputs": [],
    "source": [
     "###json elements \n",
-    "#from redisearch import Path\n",
-    "from redisearch import Client, TextField, IndexDefinition, TagField,NumericField\n",
-    "#from redisearch import IndexDefinition, IndexType\n",
-    "#from redisearch import NumericFilter, Query\n",
     "\n",
-    "\n",
-    "from redisearch import Client, TextField, IndexDefinition\n",
     "import datetime\n",
     "import os\n",
+    "from redisearch import Client, TextField, IndexDefinition, TagField,NumericField, Query\n",
     "from redis import ResponseError\n",
+    "#from redisearch import Path\n",
+    "\n",
+    "#from redisearch import NumericFilter, Query\n",
     "\n",
     "client = Client(\"index-document\")\n",
     "#definition = IndexDefinition(prefix=’doc:’) -> available for redisearch 2.0\n",
-    "\n",
     "START_TIME = datetime.datetime.now().strftime(\"%Y-%m-%d-%H:%M.%S\")\n",
-    "\n",
     "client.redis.set(\"start-time\", START_TIME)\n",
     "\n",
     "try:\n",
     "    client.info()\n",
     "except ResponseError:\n",
     "    print(\"Index does not exist. We need to create it!\")\n",
+    "\n",
     "\n",
     "#set-up\n",
     "user1 = {\n",
@@ -387,27 +378,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema = (\n",
-    "    TextField(\"$.brand\", as_name=\"brand\"),\n",
-    "    TextField(\"$.model\", as_name=\"model\"),\n",
-    "    TextField(\"$.description\", as_name=\"description\"),\n",
-    "    NumericField(\"$.price\", as_name=\"price\"),\n",
-    "    TagField(\"$.condition\", as_name=\"condition\"),\n",
+    "# Set up the schema\n",
+    "schema = IndexDefinition(\n",
+    "    prefix=[\"bicycle:\"],\n",
+    "    index_type=IndexType.JSON\n",
     ")\n",
+    "schema.add_field(TextField(\"$.brand\", as_name=\"brand\"))\n",
+    "schema.add_field(TextField(\"$.model\", as_name=\"model\"))\n",
+    "schema.add_field(TextField(\"$.description\", as_name=\"description\"))\n",
+    "schema.add_field(NumericField(\"$.price\", as_name=\"price\"))\n",
+    "schema.add_field(TagField(\"$.condition\", as_name=\"condition\"))\n",
     "\n",
-    "index = r.ft(\"idx:bicycle\")\n",
-    "index.create_index(\n",
-    "    schema,\n",
-    "    definition=IndexDefinition(prefix=[\"bicycle:\"], index_type=IndexType.JSON),\n",
-    ")\n",
+    "# Create the index\n",
+    "index = client.create_index(schema=schema)\n",
     "\n",
+    "# Index your documents\n",
     "for bid, bicycle in enumerate(bicycles):\n",
-    "    r.json().set(f\"bicycle:{bid}\", Path.root_path(), bicycle)\n",
+    "    client.json().set(f\"bicycle:{bid}\", Path.root_path(), bicycle)\n",
     "\n",
-    "res = index.search(Query(\"*\"))\n",
+    "# Perform a search\n",
+    "res = index.search(\"*\")\n",
     "print(\"Documents found:\", res.total)\n",
     "\n",
-    "res = index.search(Query(\"@model:Jigger\"))\n",
+    "res = index.search(\"@model:Jigger\")\n",
     "print(res)"
    ]
   },
@@ -431,7 +424,7 @@
     "\n",
     "###add document\n",
     "# path of the folder where documents are stored\n",
-    "folder = \"/Users/josi/awt-pjws23-24-LLM-2\"\n",
+    "folder = \"/Users/josi/Documents/GitHub/awt-pjws23-24-LLM-2/\"\n",
     "# indexing each documents in the folder\n",
     "for file in os.listdir(folder):\n",
     "    filepath = os.path.join(folder, file)\n",
