--- a/testing/evaluate_model.ipynb
+++ b/testing/evaluate_model.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -25,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define System Prompt and load Llama2 Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -32,7 +46,16 @@
    "source": [
     "B_INST, E_INST = \"[INST]\", \"[/INST]\"\n",
     "B_SYS, E_SYS = \"<<SYS>>\\n\", \"\\n<</SYS>>\\n\\n\"\n",
-    "# DEFAULT_SYSTEM_PROMPT = \"You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature. If a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information\"\n",
+    "# DEFAULT_SYSTEM_PROMPT = \"You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature. If a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Chatbot prompt for later use case\n",
     "DEFAULT_SYSTEM_PROMPT = \"\"\"\n",
     "<<SYS>>\n",
     "You are a chatbot that helps people learn a new language. You always give the answer to the question in a formal manner.\n",
@@ -49,9 +72,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#general prompt to test llm for testing questions\n",
     "SYSTEM_PROMPT_2 = \"\"\"\n",
     "<<SYS>>\n",
-    "You are a chatbot that always gives the answer to the question in a formal, short and very simple manner. You leave out unnecessary words and if the answer is only one word you don't put a dot and the end. If you are asked to translate something you translate it.\n",
+    "You are alwys giving the answer to the question in a short and very simple manner and you answer in the language style that is asked from you. You leave out unnecessary words and if you have several options you would like to present only name one. If the answer is only one word you don't put a dot and the end. If you are asked to translate something you translate it.\n",
     "If you don't know the answer to a question, you tell them truthfully that you don't know and don't give false information. You are a helpful, respectful and honest assistant.\n",
     "Your answers should not contain harmful, unethical, racist, sexist, toxic, dangerous or illegal content. Please make sure that your answers are socially unbiased and positive.\n",
     "If a question does not make sense or is not factually coherent, please explain why, rather than answering something incorrectly.<</SYS>>\n",
@@ -78,7 +102,7 @@
    "outputs": [],
    "source": [
     "llm = LlamaCpp(\n",
-    "    #model_path=\"/Users/josi/Llama2_weights/llama-2-7b.Q4_K_M.gguf?download=true\",\n",
+    "    #model_path=\"/Users/josi/Llama2_weights/llama-2-7b.Q4_K_M.gguf\",\n",
     "    model_path = \"/Users/josi/Llama2_weights/llama-2-7b-chat.Q5_K_M.gguf\",\n",
     "    temperature=0.75,\n",
     "    max_tokens=2048,\n",
@@ -86,6 +110,64 @@
     "    # callback_manager=callback_manager,\n",
     "    verbose=True,  # Verbose is required to pass to the callback manager\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Dictionaries with test questions (English)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define test questions for different categories\n",
+    "informal_questions = {\n",
+    "    \"Write an informal greeting.\": \"Hey\",\n",
+    "    \"Write an informal response to the question: 'How's it going?'\": \"Hi, going good, hbu?\",\n",
+    "    \"Write an informal message inviting someone to dinner tonight\": \"Hey, wanna join us for dinner tonight?\",\n",
+    "    \"Compose an informal email closing.\": \"Cheers, [Your Name]\",\n",
+    "}\n",
+    "\n",
+    "formal_questions = {\n",
+    "    \"Write a formal greeting.\": \"Hello\",\n",
+    "    \"Write a formal response to the question: 'How is it going?'\": \"Hello, I am doing well. How about you?\",\n",
+    "    \"Write a formal message inviting someone to dinner tonight\": \"Hello, would you like to join us for dinner tonight?\",\n",
+    "    \"Compose a professional email closing.\": \"Sincerely, [Your Name]\",\n",
+    "}\n",
+    "\n",
+    "academic_questions = {\n",
+    "    \"Describe the french revolution in two sentences using academic language.\": \"The historical event of the French Revolution was marked by widespread social upheaval...\",\n",
+    "    \"Define gravity in two sentences using academic language.\": \"Gravity is a force that attracts two objects with mass\",\n",
+    "}\n",
+    "\n",
+    "translation_questions = {\n",
+    "    \"Translate 'hello' to Spanish.\": \"Hola\",\n",
+    "    \"Translate 'good morning' to French.\": \"Bonjour\",\n",
+    "    \"Translate 'Thank you' to German.\": \"Danke\",\n",
+    "    \"How do you say 'hello' in Japanese?\": \"Konnichiwa (こんにちは)\",\n",
+    "    \"Provide the Italian translation for 'book'.\": \"Libro\",\n",
+    "}\n",
+    "\n",
+    "general_knowledge_questions = {\n",
+    "    \"What is the capital of France?\": \"The capital of France is Paris\",\n",
+    "    \"What is the square root of 25?\": \"The square root of 25 is 5\",\n",
+    "    \"What is the circumference of the earth\":\"The circumference of the earth is 10\",\n",
+    "}\n",
+    "\n",
+    "# Combine all test questions into a single dictionary\n",
+    "test_questions = {**informal_questions, **formal_questions, **academic_questions, **translation_questions, **general_knowledge_questions}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate Model based on Accuracy"
    ]
   },
   {
@@ -129,24 +211,7 @@
     "    # Print overall evaluation results\n",
     "    print(f\"Total Questions: {total_questions}\")\n",
     "    print(f\"Correct Answers: {correct_answers}\")\n",
-    "    print(f\"Accuracy: {correct_answers / total_questions * 100:.2f}%\")\n",
-    "\n",
-    "\n",
-    "# Dictionary with questions\n",
-    "test_questions = {\n",
-    "    \"What is the capital of France?\": \"The capital of France is Paris\",\n",
-    "    \"Translate 'hello' to Spanish.\": \"Hola\",\n",
-    "    \"Write an informal greeting.\": \"Hey there!\",\n",
-    "    \"Explain the concept of gravity.\": \"Gravity is a force that attracts two objects with mass\",\n",
-    "    \"What is the square root of 25?\": \"The square root of 25 is 5\",\n",
-    "    \"Translate 'good morning' to French.\": \"Bonjour\",\n",
-    "    \"Translate 'Thank you' to German.\": \"Danke\",\n",
-    "    \"How do you say 'hello' in Japanese?\": \"Konnichiwa (こんにちは)\",\n",
-    "    \"Provide the Italian translation for 'book'.\": \"Libro\",\n",
-    "    \"Write an informal response to the question: 'How's it going?'\": \"Hey! It's going well, thanks for asking! How about you?\",\n",
-    "    \"Explain the concept of artificial intelligence in an academic style.\": \"Artificial Intelligence (AI) refers to the development of algorithms and computational systems that enable machines to exhibit intelligent behavior, learn from experience, and perform tasks traditionally requiring human cognitive abilities. It encompasses a broad range of techniques, including machine learning, natural language processing, and expert systems. In an academic context, AI research focuses on understanding, modeling, and implementing intelligent agents capable of reasoning, problem-solving, and adapting to complex environments. The goal is to create systems that emulate human-like intelligence, allowing machines to autonomously analyze data, make informed decisions, and continuously improve their performance across diverse domains\",\n",
-    "    \"Write a casual message inviting someone to an event.\": \"Hey, want to join us for an event this weekend?\",\n",
-    "}\n"
+    "    print(f\"Accuracy: {correct_answers / total_questions * 100:.2f}%\")\n"
    ]
   },
   {
@@ -159,12 +224,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate Model based on Rouge (Recall-Oriented Understudy for Gissing Evaluation)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(model_answers)"
+    "### ROUGE (Recall-Oriented Understudy for Gissing Evaluation): a set of metrics used for evaluating the quality of summaries. It compares the generated summary with one or more reference summaries and calculates precision, recall, and F1-score \n",
+    "\n",
+    "#%pip install rouge\n",
+    "from rouge import Rouge\n",
+    "\n",
+    "def evaluate_model(model, questions):\n",
+    "    try:\n",
+    "        correct_answers = 0\n",
+    "        total_questions = len(questions)\n",
+    "        model_answers = []\n",
+    "        rouge_scores = {\"rouge-1\": {\"precision\": 0, \"recall\": 0, \"f1-score\": 0}}\n",
+    "\n",
+    "        for question, expected_answer in questions.items():\n",
+    "            # Get the model's answer for the current question\n",
+    "            prompt = get_prompt(question)\n",
+    "            model_answer = model(prompt)\n",
+    "\n",
+    "            # format answer to match properly \n",
+    "            model_answer = model_answer.rstrip('.')\n",
+    "            #and calculate accuracy (which is currently defined as approximate match where only any word has to match the correct answer.)\n",
+    "            if any(word.lower() in model_answer.lower() for word in expected_answer.split()):\n",
+    "                correct_answers += 1\n",
+    "\n",
+    "            # Concatenate model's answer and expected answer into strings for Rouge evaluation\n",
+    "            candidate_summary = \" \".join(model_answer.split())\n",
+    "            reference_summary = \" \".join(expected_answer.split())\n",
+    "\n",
+    "            # Update Rouge scores\n",
+    "            rouge = Rouge()\n",
+    "            scores = rouge.get_scores(candidate_summary, reference_summary)\n",
+    "\n",
+    "            # Check if Rouge calculation was successful - WIP\n",
+    "            if scores:\n",
+    "                scores = scores[0]\n",
+    "                for metric in [\"precision\", \"recall\", \"f1-score\"]:\n",
+    "                    rouge_scores[f\"rouge-1\"][metric] += scores.get(f\"rouge-1\", {}).get(metric, 0)\n",
+    "\n",
+    "            # store model answers in array\n",
+    "            model_answers.append({\n",
+    "                \"question\": question,\n",
+    "                \"expected_answer\": expected_answer,\n",
+    "                \"model_answer\": model_answer,\n",
+    "            })\n",
+    "\n",
+    "            #print each model answer with score\n",
+    "            print(f\"Question: {question}\")\n",
+    "            print(f\"Expected Answer: {expected_answer}\")\n",
+    "            print(f\"Model Answer: {model_answer}\")\n",
+    "            print(\"------------\")\n",
+    "\n",
+    "\n",
+    "        # Calculate average Rouge scores\n",
+    "        for metric in [\"precision\", \"recall\", \"f1-score\"]:\n",
+    "            rouge_scores[f\"rouge-1\"][metric] /= total_questions\n",
+    "\n",
+    "        # Print overall evaluation results\n",
+    "        print(f\"Total Questions: {total_questions}\")\n",
+    "        print(f\"Correct Answers: {correct_answers}\")\n",
+    "        print(f\"Accuracy: {correct_answers / total_questions * 100:.2f}%\")\n",
+    "        print(\"Rouge Scores:\")\n",
+    "        print(rouge_scores)\n",
+    "\n",
+    "        return model_answers, rouge_scores\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "        return None, None"
    ]
   },
   {
@@ -174,37 +312,24 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Sample Test Suite\n",
-    "test_suite = {\n",
-    "    \"Test1\": \"Question 1\",\n",
-    "    \"Test2\": \"Question 2\",\n",
-    "    \"Test3\": \"Question 3\",\n",
-    "    \"Test4\": \"Question 4\",\n",
-    "    \"Test5\": \"Question 5\",\n",
-    "}\n",
+    "model_answers, rouge_scores = evaluate_model(llm, test_questions)\n",
     "\n",
-    "# Sample Predictions from the Language Model\n",
-    "predictions = {\n",
-    "    \"Test1\": \"Answer 1\",\n",
-    "    \"Test2\": \"Answer 2\",\n",
-    "    \"Test3\": \"Answer 3\",\n",
-    "    \"Test4\": \"Answer 4\",\n",
-    "    \"Test5\": \"Answer 5\",\n",
-    "}\n",
     "\n",
-    "# Function to Calculate the Accuracy of the Model\n",
-    "def accuracy(test_suite, predictions):\n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    for test in test_suite:\n",
-    "        total += 1\n",
-    "        if test_suite[test] == predictions[test]:\n",
-    "            correct += 1\n",
-    "    return correct / total\n",
-    "\n",
-    "# Evaluate the Model's Performance\n",
-    "print(\"Accuracy: \", accuracy(test_suite, predictions))\n",
-    "\n"
+    "###current output: \n",
+    "#Total Questions: 19\n",
+    "#Correct Answers: 16\n",
+    "#Accuracy: 84.21%\n",
+    "#Rouge Scores:\n",
+    "#{'rouge-1': {'precision': 0.0, 'recall': 0.0, 'f1-score': 0.0}}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###Performance Evaluation - Perplexity: measure that quantifies how well the model predicts a sample of text. Lower perplexity values indicate better performance \n"
    ]
   }
  ],
