--- a/testing/evaluate_model.ipynb
+++ b/testing/evaluate_model.ipynb
@@ -156,11 +156,43 @@
     "general_knowledge_questions = {\n",
     "    \"What is the capital of France?\": \"The capital of France is Paris\",\n",
     "    \"What is the square root of 25?\": \"The square root of 25 is 5\",\n",
-    "    \"What is the circumference of the earth\":\"The circumference of the earth is 10\",\n",
+    "    \"What is the circumference of the earth?\":\"The circumference of the earth is approximately 40,075 kilometers\",\n",
+    "    \"question\": \"Explain the concept of photosynthesis.\", \"answer\": \"Photosynthesis is the process by which green plants and some other organisms use sunlight to synthesize foods with the help of chlorophyll.\",\n",
+    "}\n",
+    "\n",
+    "textual_entailment = {\n",
+    "    \"question\": \"Given the statement 'The sun rises in the east,' is the statement 'The earth is flat' likely true or false?\", \"answer\": \"False\",\n",
+    "    \"question\": \"If 'A implies B' and 'B is false,' what can you conclude about A?\", \"answer\": \"Nothing definitive can be concluded about A.\",\n",
+    "}\n",
+    "\n",
+    "ambiguity_handling = {\n",
+    "    \"question\": \"Provide two different interpretations of the phrase 'bank account.'\", \"answer\": \"1. An account with a financial institution. 2. The land alongside a river.\",\n",
+    "    \"question\": \"What could the word 'bat' mean in the context of baseball and in the context of an animal?\", \"answer\": \"In baseball, a 'bat' is a piece of equipment used to hit the ball. In the context of an animal, a 'bat' is a flying mammal.\",\n",
+    "}\n",
+    "\n",
+    "reasoning_problem_solving = {\n",
+    "    \"question\": \"If a car travels at 60 miles per hour, how long will it take to cover 120 miles?\", \"answer\": \"2 hours\",\n",
+    "    \"question\": \"Solve the following math problem: 3x + 5 = 20.\", \"answer\": \"x = 5\",\n",
+    "}\n",
+    "\n",
+    "analogical_reasoning = {\n",
+    "    \"question\": \"If 'cat' is to 'kitten,' what is 'dog' to?\", \"answer\": \"'Dog' is to 'puppy'\",\n",
+    "    \"question\": \"Identify the relationship between 'pen' and 'ink' and apply the same relationship to 'keyboard.'\", \"answer\": \"'Keyboard' is to 'electricity'\",\n",
+    "}\n",
+    "\n",
+    "commonsense_reasoning = {\n",
+    "    \"question\": \"What might be a common reaction to receiving a gift?\", \"answer\": \"A common reaction to receiving a gift is expressing gratitude and appreciation.\",\n",
+    "    \"question\": \"Predict a possible consequence of leaving food out in the sun for too long.\", \"answer\": \"Leaving food out in the sun for too long may lead to spoilage and bacterial growth.\",\n",
+    "}\n",
+    "\n",
+    "# Named Entity Recognition (NER)\n",
+    "ner = {\n",
+    "    \"question\": \"Identify the named entities in the sentence 'Elon Musk is the CEO of SpaceX.'\", \"answer\": \"Named entities: Elon Musk, SpaceX.\",\n",
+    "    \"question\": \"Extract the dates mentioned in the text 'The conference is scheduled for January 25-27, 2023.'\", \"answer\": \"Dates: January 25-27, 2023.\",\n",
     "}\n",
     "\n",
     "# Combine all test questions into a single dictionary\n",
-    "test_questions = {**informal_questions, **formal_questions, **academic_questions, **translation_questions, **general_knowledge_questions}\n"
+    "test_questions = {**informal_questions, **formal_questions, **academic_questions, **translation_questions, **general_knowledge_questions,**textual_entailment,**ambiguity_handling,**reasoning_problem_solving,**analogical_reasoning,**commonsense_reasoning,**ner}\n"
    ]
   },
   {
@@ -329,7 +361,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###Performance Evaluation - Perplexity: measure that quantifies how well the model predicts a sample of text. Lower perplexity values indicate better performance \n"
+    "###Correctness Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install bitsandbytes\n",
+    "%pip install datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###Performance Evaluation - Perplexity: measure that quantifies how well the model predicts a sample of text. Lower perplexity values indicate better performance \n",
+    "import torch\n",
+    "from transformers import AutoModelForCausalLM, LlamaTokenizer\n",
+    "import bitsandbytes as bnb\n",
+    "\n",
+    "model_name = '/kaggle/input/llama-2/pytorch/7b-chat-hf/1'\n",
+    "\n",
+    "tokenizer = LlamaTokenizer.from_pretrained(model_name)\n",
+    "\n",
+    "free_in_GB = int(torch.cuda.mem_get_info()[0]/1024**3)\n",
+    "max_memory = f'{int(torch.cuda.mem_get_info()[0]/1024**3)-2}GB'\n",
+    "\n",
+    "n_gpus = torch.cuda.device_count()\n",
+    "max_memory = {i: max_memory for i in range(n_gpus)}\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "  model_name,\n",
+    "  device_map='auto',\n",
+    "  load_in_4bit=True,\n",
+    "  max_memory=max_memory,\n",
+    "  do_sample=True,\n",
+    "  torch_dtype=\"auto\"\n",
+    ")\n",
+    "\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "test = load_dataset(\"wikitext\", \"wikitext-2-raw-v1\", split=\"test\")\n",
+    "encodings = tokenizer(\"\\n\\n\".join(test[\"text\"]), return_tensors=\"pt\")\n",
+    "\n",
+    "\n",
+    "import torch\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "max_length = model.config.max_length\n",
+    "stride = 512\n",
+    "seq_len = encodings.input_ids.size(1)\n",
+    "device = \"cuda\"\n",
+    "\n",
+    "nlls = []\n",
+    "prev_end_loc = 0\n",
+    "for begin_loc in tqdm(range(0, seq_len, stride)):\n",
+    "    end_loc = min(begin_loc + max_length, seq_len)\n",
+    "    trg_len = end_loc - prev_end_loc  # may be different from stride on last loop\n",
+    "    input_ids = encodings.input_ids[:, begin_loc:end_loc].to(device)\n",
+    "    target_ids = input_ids.clone()\n",
+    "    target_ids[:, :-trg_len] = -100\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(input_ids, labels=target_ids)\n",
+    "\n",
+    "        # loss is calculated using CrossEntropyLoss which averages over valid labels\n",
+    "        # N.B. the model only calculates loss over trg_len - 1 labels, because it internally shifts the labels\n",
+    "        # to the left by 1.\n",
+    "        neg_log_likelihood = outputs.loss\n",
+    "\n",
+    "    nlls.append(neg_log_likelihood)\n",
+    "\n",
+    "    prev_end_loc = end_loc\n",
+    "    if end_loc == seq_len:\n",
+    "        break\n",
+    "\n",
+    "ppl = torch.exp(torch.stack(nlls).mean())"
    ]
   }
  ],
