add google colab

--- a/vector_store/embedding_modell_test.ipynb
+++ b/vector_store/embedding_modell_test.ipynb
@@ -20,8 +20,8 @@
         "- https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
         "- https://huggingface.co/sentence-transformers/all-MiniLM-L12-v2\n",
         "\n",
-        "[Article](https://medium.com/@nils_reimers/openai-gpt-3-text-embeddings-really-a-new-state-of-the-art-in-dense-text-embeddings-6571fe3ec9d9)\n",
-        "\n"
+        "- [Article](https://medium.com/@nils_reimers/openai-gpt-3-text-embeddings-really-a-new-state-of-the-art-in-dense-text-embeddings-6571fe3ec9d9)\n",
+        "- [Google Colab](https://colab.research.google.com/drive/1aPlUxkGQc6Z7MZ5sdjA4s1l4OwQ0P-2r#scrollTo=JKudmVKgrs70)"
       ]
     },
     {
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -143,16 +143,7 @@
         "id": "9KefvDkqIC91",
         "outputId": "a6b9bec3-3293-400e-f38d-4f92b09bc24f"
       },
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-0839d2dfdb88>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"\"\"# tokenizer\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\"\"\"\n",
         "# tokenizer\n",
@@ -655,6 +646,17 @@
         "embedding_model = HuggingFaceEmbeddings(\n",
         "        model_name=\"sentence-transformers/all-MiniLM-L12-v2\",\n",
         "        model_kwargs={\"device\": \"cuda\"},) # cpu lokal"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from langchain.embeddings import HuggingFaceInstructEmbeddings\n",
+        "embedding_function = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L12-v2\",\n",
+        "                                                      model_kwargs={\"device\": \"cuda\"})"
       ]
     },
     {
